# flow

./: .gitignore  Cargo.toml  README.md  flow.toml
docs/: frontend-integration.md  implementation-status.md
docs/index/: README.md  fulltext-search-integration.md  search-api.md
flow/: Cargo.toml
flow-api/: Cargo.toml
flow-api/src/: lib.rs
flow-api/src/extension/: client.rs  index.rs  mod.rs  query.rs  scheme.rs
flow-api/src/search/: mod.rs
flow-api/src/security/: authentication.rs  authorization.rs  mod.rs  request_info.rs
flow-api/src/theme/: mod.rs
flow-domain/: Cargo.toml
flow-domain/src/: lib.rs
flow-domain/src/attachment/: mod.rs
flow-domain/src/content/: category.rs  comment.rs  mod.rs  post.rs  single_page.rs  snapshot.rs  tag.rs
flow-domain/src/migration/: mod.rs
flow-domain/src/notification/: mod.rs
flow-domain/src/plugin/: mod.rs
flow-domain/src/security/: auth_provider.rs  mod.rs  pat.rs  role.rs  role_binding.rs  user.rs  user_connection.rs
flow-domain/src/theme/: mod.rs
flow-infra/: Cargo.toml
flow-infra/src/: lib.rs  system_setting.rs
flow-infra/src/attachment/: file_validator.rs  mod.rs  resource_mapping.rs  storage.rs
flow-infra/src/cache/: mod.rs
flow-infra/src/database/: extension_store.rs  manager.rs  mod.rs  repository.rs  tests.rs
flow-infra/src/extension/: client.rs  converter.rs  mod.rs
flow-infra/src/index/: doc_type_converter.rs  engine.rs  fulltext_field_mapping.rs  indices.rs  label_index.rs  manager.rs  mod.rs  multi_value_index.rs  query_visitor.rs  single_value_index.rs
flow-infra/src/logging/: mod.rs
flow-infra/src/search/: converter.rs  mod.rs  tantivy_engine.rs  tests.rs
flow-infra/src/security/: crypto.rs  jwt.rs  mod.rs  oauth2_state_cache.rs  oauth2_token_cache.rs  rate_limit.rs  session.rs  two_factor_cache.rs
flow-infra/src/theme/: finder_registry.rs  mod.rs  resolver.rs  template_engine.rs
flow-infra/src/websocket/: mod.rs
flow-migration/: Cargo.toml
flow-migration/src/: lib.rs  m20250101_000001_create_extensions_table.rs
flow-plugin/: Cargo.toml
flow-plugin/src/: descriptor.rs  ffi.rs  lib.rs  loader.rs  manager.rs  plugin.rs
flow-service/: Cargo.toml
flow-service/src/: lib.rs
flow-service/src/attachment/: group_service.rs  mod.rs  policy_service.rs  policy_template_service.rs  shared_url.rs  thumbnail.rs
flow-service/src/content/: category_service.rs  comment_service.rs  mod.rs  patch_utils.rs  post_service.rs  search_indexing_post_service.rs  search_indexing_single_page_service.rs  single_page_service.rs  snapshot_service.rs  tag_service.rs
flow-service/src/migration/: backup_service.rs  mod.rs  restore_service.rs
flow-service/src/notification/: mod.rs  notification_center.rs  notification_service.rs
flow-service/src/search/: cached.rs  document_converter.rs  mod.rs
flow-service/src/security/: auth_service.rs  authorization_service.rs  mod.rs  password_service.rs  role_binding_service.rs  role_service.rs  totp_service.rs  user_connection_service.rs  user_service.rs
flow-service/src/theme/: finders.rs  installer.rs  mod.rs
flow-web/: Cargo.toml
flow-web/src/: app_state.rs  extractors.rs  lib.rs  openapi.rs
flow-web/src/extractors/: multipart_with_user.rs
flow-web/src/handlers/: attachments.rs  auth.rs  backup.rs  categories.rs  comments.rs  extension.rs  extension_router.rs  extension_utils.rs  groups.rs  mod.rs  notifications.rs  oauth2.rs  policies.rs  posts.rs  roles.rs  search.rs  single_pages.rs  static_resources.rs  subscriptions.rs  tags.rs  theme.rs  theme_routes.rs  two_factor.rs  uc.rs  users.rs  websocket.rs
flow-web/src/security/: mod.rs
flow-web/src/security/middleware/: auth.rs  authorize.rs  mod.rs  rate_limit.rs
flow-web/src/security/providers/: basic_auth.rs  form_login.rs  mod.rs  oauth2.rs  pat.rs  two_factor.rs
flow/src/: config.rs  error.rs  main.rs  server.rs
frontend/: .gitignore  MIGRATION.md  README.md  env.d.ts  migrate.sh  package.json
frontend/console-src/: main.ts
frontend/console-src/composables/: use-content-snapshot.ts  use-dashboard-stats.ts  use-entity-extension-points.ts  use-operation-extension-points.ts  use-setting-form.ts  use-slugify.ts
frontend/console-src/layouts/: BasicLayout.vue
frontend/console-src/modules/dashboard/: Dashboard.vue  DashboardDesigner.vue  module.ts
frontend/console-src/router/guards/: auth-check.ts  permission.ts
frontend/console-src/setup/: setupModules.ts
frontend/console-src/stores/: theme.ts
frontend/docs/components/: README.md
frontend/docs/extension-points/: backup.md  comment-content.md  comment-editor.md  comment-subject-ref.md  dashboard.md  entity-listitem-field.md  entity-listitem-operation.md  plugin-installation-tabs.md  plugin-self-tabs.md  theme-list-tabs.md
frontend/docs/routes-generation/: README.md
frontend/src/components/alerts/: H2WarningAlert.vue
frontend/src/components/attachment/: AttachmentPermalinkList.vue
frontend/src/components/base-app/: BaseApp.vue
frontend/src/components/button/: SubmitButton.vue
frontend/src/components/common/: AppDownloadAlert.vue
frontend/src/components/dropdown-selector/: EditorProviderSelector.vue
frontend/src/components/editor/: DefaultEditor.vue
frontend/src/components/entity/: EntityDropdownItems.vue
frontend/src/components/entity-fields/: EntityFieldItems.vue  StatusDotField.vue
frontend/src/components/filter/: CategoryFilterDropdown.vue  FilterCleanButton.vue  FilterDropdown.vue  FilterTag.vue  (+2 more)
frontend/src/composables/: use-content-cache.ts  use-editor-extension-points.ts  use-role.ts  use-route-menu-generator.ts  use-session-keep-alive.ts  use-title.ts
frontend/src/layouts/: MobileMenu.vue  UserProfileBanner.vue
frontend/src/setup/: setupApiClient.ts  setupComponents.ts  setupStyles.ts
frontend/src/stores/: plugin.ts  role.ts
frontend/src/utils/: modal.ts  role.ts
frontend/src/vite/: config-builder.ts  library-external.ts
frontend/uc-src/: main.ts
frontend/uc-src/modules/: index.ts
frontend/uc-src/router/: constant.ts
frontend/uc-src/setup/: setupModules.ts
(+289 files in other folders)
