[package]
name = "flow-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 工具库
uuid = { workspace = true }
chrono = { workspace = true }

# 错误处理
thiserror = { workspace = true }

# 异步trait
async-trait = { workspace = true }
