[package]
name = "flow-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# API层（使用Extension trait）
flow-api = { path = "../flow-api" }

# 序列化
serde = { workspace = true }

# 工具库
uuid = { workspace = true }
chrono = { workspace = true }

# 验证
validator = { workspace = true }
