[package]
name = "flow-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# API和领域
flow-api = { path = "../flow-api" }
flow-domain = { path = "../flow-domain" }
flow-infra = { path = "../flow-infra" }

# 异步
tokio = { workspace = true }
async-trait = { workspace = true }

# 错误处理
anyhow = { workspace = true }
thiserror = { workspace = true }

# 密码加密
bcrypt = { workspace = true }
argon2 = { workspace = true }

# UUID生成
uuid = { workspace = true }

# 时间处理
chrono = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 图片处理
image = { workspace = true }

# 日志
tracing = { workspace = true }
